# D3DW

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  D3DW.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
D3DW/: CMakeLists.txt  D3DW.vcxproj  D3DW.vcxproj.filters
D3DW/src/: AdapterReader.h  Graphics.cpp  Graphics.h  KeyboardClass.cpp  MouseClass.cpp  RenderWindow.cpp  Window.cpp  Window.h  WindowContainer.cpp  WindowContainer.h
D3DWTests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  D3DWTests.sln  D3DWTests.vcxproj  D3DWTests.vcxproj.filters
D3DWTests/src/: D3DWdemo.cpp
DirectXTK/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  DirectXTK.sln  DirectXTK.vcxproj  DirectXTK.vcxproj.filters  xwbtool.vcxproj  xwbtool.vcxproj.filters
DirectXTK/Src/Shaders/Compiled/: AlphaTestEffect_PSAlphaTestEqNe.inc  AlphaTestEffect_PSAlphaTestEqNeNoFog.inc  AlphaTestEffect_PSAlphaTestLtGt.inc  AlphaTestEffect_PSAlphaTestLtGtNoFog.inc  AlphaTestEffect_VSAlphaTest.inc  AlphaTestEffect_VSAlphaTestNoFog.inc  AlphaTestEffect_VSAlphaTestVc.inc  AlphaTestEffect_VSAlphaTestVcNoFog.inc  BasicEffect_PSBasic.inc  BasicEffect_PSBasicNoFog.inc  BasicEffect_PSBasicPixelLighting.inc  BasicEffect_PSBasicPixelLightingTx.inc  (+109 more)
bin-int/: vc142.idb
bin-int/D3DWTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  D3DWTests.lastbuildstate
lib-int/: D3DW.idb  D3DW.vcxproj.FileListAbsolute.txt
lib-int/D3DW.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
